force-app/main/default/objects/Exercise__c/Exercise__c.object-meta.xml
<CustomObject>
    <label>Exercise</label>
    <nameField>
        <displayFormat>EX-{00000}</displayFormat>
        <label>Exercise Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exercises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>