force-app/main/default/objects/Exercise__c/fields/Intensity__c.field-meta.xml
<CustomField>
    <fullName>Intensity__c</fullName>
    <defaultValue>&quot;High&quot;</defaultValue>
    <label>Intensity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Very High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>